--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "finance-tracker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -47,6 +47,8 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
